--- a/MVCSSLV/pom.xml
+++ b/MVCSSLV/pom.xml
@@ -63,7 +63,9 @@
 		<finalName>java2</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -79,29 +81,29 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.3</version>
 				<configuration>
-					<webXml>WebContent\WEB-INF\web.xml</webXml>
+					<webXml>WebContent/WEB-INF/web.xml</webXml>
 					<webResources>
 						<resource>
 							<filtering>false</filtering>
 							<directory>WebContent</directory>
 							<targetPath></targetPath>
 							<includes>
-								<include>**\*.txt</include>
-								<include>**\*.jsp</include>
-								<include>**\*.css</include>
-								<include>**\*.jpg</include>
+								<include>**/*.txt</include>
+								<include>**/*.jsp</include>
+								<include>**/*.css</include>
+								<include>**/*.jpg</include>
 							</includes>
 						</resource>
 						<resource>
 							<filtering>false</filtering>
-							<directory>WebContent\WEB-INF</directory>
+							<directory>WebContent/WEB-INF</directory>
 							<targetPath>WEB-INF</targetPath>
 							<includes>
 								<include>mvc-dispatcher-servlet.xml</include>
-								<include>**\*.class</include>
-								<include>classes\BeanLocations.xml</include>
-								<include>classes\hibernate.cfg.xml</include>
-								<include>classes\properties\jdbc.properties</include>
+								<include>**/*.class</include>
+								<include>classes/BeanLocations.xml</include>
+								<include>classes/hibernate.cfg.xml</include>
+								<include>classes/properties/jdbc.properties</include>
 							</includes>
 						</resource>
 					</webResources>
@@ -173,4 +175,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
