--- a/MVCSSLV/WebContent/WEB-INF/web.xml
+++ b/MVCSSLV/WebContent/WEB-INF/web.xml
@@ -20,7 +20,7 @@
   	
   	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/classes/BeanLocations.xml</param-value>
+		<param-value>classpath:BeanLocations.xml</param-value>
   	</context-param>
  
   	<listener>
