--- a/MVCSSLV/WebContent/WEB-INF/web.xml
+++ b/MVCSSLV/WebContent/WEB-INF/web.xml
@@ -31,7 +31,7 @@
   	
   	<servlet>
     	<servlet-name>gwtService</servlet-name>
-    	<servlet-class>mvc.gwt.web.server.GreetingServiceGWTWrapperImpl</servlet-class>
+    	<servlet-class>net.voaideahost.sslv.mvc.gwt.web.server.GreetingServiceGWTWrapperImpl</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
