--- a/MVCSSLV/WebContent/WEB-INF/web.xml
+++ b/MVCSSLV/WebContent/WEB-INF/web.xml
@@ -5,6 +5,24 @@
 	version="3.0">
 	<display-name>java2</display-name>
 	
+  	<filter> 
+    	<filter-name>
+    		requestContextFilter
+    	</filter-name> 
+    	<filter-class>org.springframework.web.filter.RequestContextFilter</filter-class>
+  	</filter>
+  	 
+  	<filter-mapping> 
+    	<filter-name>requestContextFilter</filter-name> 
+    	<url-pattern>/*</url-pattern>
+  	</filter-mapping>
+  	
+  	<listener>
+  		<listener-class>
+  			org.springframework.web.context.request.RequestContextListener
+  		</listener-class>
+	</listener>
+	
 	<servlet>
   		<servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>
@@ -21,7 +39,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:BeanLocations.xml</param-value>
-  	</context-param>
+  	</context-param>	
   	
   	<listener>
         <listener-class>
