--- a/MVCSSLV/src/main/resources/jdbc.properties
+++ b/MVCSSLV/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://voaideahost.net:3306/suxlv2_sslv?autoReconnect=true
-jdbc.username=suxlv2_sslv
-jdbc.password=a26195359
+jdbc.url=jdbc:mysql://localhost:3306/sslv?autoReconnect=true
+jdbc.username=sslv
+jdbc.password=sslv1
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
